# mlflow-course

./: Readme.md  pyproject.toml  test.ipynb  test_mlflow.py
mlflow-example/: train.py
