[tool.poetry]
name = "mlflow-course"
version = "0.1.0"
description = ""
authors = ["Olena Hlushchenko <greyxray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.8.1"
mypy = "^1.7.0"
ipykernel = "^6.26.0"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter = "^1.0.0"
pyspark = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
